tests/expectations/parser-statement/statement/expression_fail.out
Error [EPAR0370009]: unexpected string: expected 'expression', found ']'
    --> test_0:1:2
     |
   1 | (];
     |  ^


Error [EPAR0370009]: unexpected string: expected 'expression', found ')'
    --> test_1:1:2
     |
   1 | [);
     |  ^


Error [EPAR0370016]: Could not lex the following content: `\y`.



Error [EPAR0370009]: unexpected string: expected 'expression', found ';'
    --> test_3:1:6
     |
   1 | (x,y|;
     |      ^


Error [EPAR0370009]: unexpected string: expected 'expression', found '}'
    --> test_4:1:3
     |
   1 | x[};
     |   ^


Error [EPAR0370005]: expected ) -- found ']'
    --> test_5:1:6
     |
   1 | (x, y];
     |      ^


